--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_SERVER = "https://bookingapp-backend.onrender.com/api"
-# REACT_APP_BACKEND_SERVER = "http://localhost:3001/api"
+# REACT_APP_BACKEND_SERVER = "https://bookingapp-backend.onrender.com/api"
+REACT_APP_BACKEND_SERVER = "http://localhost:3001/api"
