--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
