--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,10 @@ yarn-error.log*
 
 rooms-data-set.js
 hotel-data-set.js
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
